--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <html>
-	<head>
-		<title>Solo Ping Pong</title>
-		<meta charset="UTF-8">
-		<meta name="author" content="Orginal: Kushagra Agarwal, Modified by: Jervis Thompson ">
-		<meta name="description" content="Ping-Pong Game with HTML5, Canvas, and Sounds">
-		<!-- http://cssdeck.com/labs/ping-pong-game-tutorial-with-html5-canvas-and-sounds -->
-		<link rel="stylesheet" href="css/basic.css">
-	</head>
-	<body>
-		<canvas id="canvas"></canvas>
-		<script src="js/game.js"></script>
-	</body>
+
+<head>
+  <title>Solo Ping Pong - Week 01</title>
+  <meta charset="UTF-8">
+  <meta name="author" content="Orginal: Kushagra Agarwal, Modified by: Jervis Thompson ">
+  <meta name="description" content="Ping-Pong Game with HTML5, Canvas, and Sounds">
+  <!-- http://cssdeck.com/labs/ping-pong-game-tutorial-with-html5-canvas-and-sounds -->
+  <link rel="stylesheet" href="css/basic.css">
+</head>
+
+<body>
+  <p>Holla</p>
+  <canvas id="canvas"></canvas>
+  <script src="js/game.js"></script>
+</body>
+
 </html>
