Added collision, sound, and game refresh
To make the game playable and more interesting

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <meta name="author" content="Orginal: Kushagra Agarwal, Modified by: Jervis Thompson ">
   <meta name="description" content="Ping-Pong Game with HTML5, Canvas, and Sounds">
   <!-- http://cssdeck.com/labs/ping-pong-game-tutorial-with-html5-canvas-and-sounds -->
-  <link rel="stylesheet" href="css/basic.css">
-</head>
+  <link rel="stylesheet" href="css/basic.css"> </head>
 
 <body>
   <canvas id="canvas"></canvas>
+  <audio preload="true" id="collide">
+    <source src="snd/pop.mp3" />
+    <source src="snd/pop.wav" /> </audio>
   <script src="js/game.js"></script>
 </body>
 
